; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/wps/extr_wps_dev_attr.c_wps_device_data_free.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/wps/extr_wps_dev_attr.c_wps_device_data_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wps_device_data = type { i32*, i32*, i32*, i32*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wps_device_data_free(%struct.wps_device_data* %0) #0 {
  %2 = alloca %struct.wps_device_data*, align 8
  store %struct.wps_device_data* %0, %struct.wps_device_data** %2, align 8
  %3 = load %struct.wps_device_data*, %struct.wps_device_data** %2, align 8
  %4 = getelementptr inbounds %struct.wps_device_data, %struct.wps_device_data* %3, i32 0, i32 4
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @os_free(i32* %5)
  %7 = load %struct.wps_device_data*, %struct.wps_device_data** %2, align 8
  %8 = getelementptr inbounds %struct.wps_device_data, %struct.wps_device_data* %7, i32 0, i32 4
  store i32* null, i32** %8, align 8
  %9 = load %struct.wps_device_data*, %struct.wps_device_data** %2, align 8
  %10 = getelementptr inbounds %struct.wps_device_data, %struct.wps_device_data* %9, i32 0, i32 3
  %11 = load i32*, i32** %10, align 8
  %12 = call i32 @os_free(i32* %11)
  %13 = load %struct.wps_device_data*, %struct.wps_device_data** %2, align 8
  %14 = getelementptr inbounds %struct.wps_device_data, %struct.wps_device_data* %13, i32 0, i32 3
  store i32* null, i32** %14, align 8
  %15 = load %struct.wps_device_data*, %struct.wps_device_data** %2, align 8
  %16 = getelementptr inbounds %struct.wps_device_data, %struct.wps_device_data* %15, i32 0, i32 2
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @os_free(i32* %17)
  %19 = load %struct.wps_device_data*, %struct.wps_device_data** %2, align 8
  %20 = getelementptr inbounds %struct.wps_device_data, %struct.wps_device_data* %19, i32 0, i32 2
  store i32* null, i32** %20, align 8
  %21 = load %struct.wps_device_data*, %struct.wps_device_data** %2, align 8
  %22 = getelementptr inbounds %struct.wps_device_data, %struct.wps_device_data* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  %24 = call i32 @os_free(i32* %23)
  %25 = load %struct.wps_device_data*, %struct.wps_device_data** %2, align 8
  %26 = getelementptr inbounds %struct.wps_device_data, %struct.wps_device_data* %25, i32 0, i32 1
  store i32* null, i32** %26, align 8
  %27 = load %struct.wps_device_data*, %struct.wps_device_data** %2, align 8
  %28 = getelementptr inbounds %struct.wps_device_data, %struct.wps_device_data* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = call i32 @os_free(i32* %29)
  %31 = load %struct.wps_device_data*, %struct.wps_device_data** %2, align 8
  %32 = getelementptr inbounds %struct.wps_device_data, %struct.wps_device_data* %31, i32 0, i32 0
  store i32* null, i32** %32, align 8
  ret void
}

declare dso_local i32 @os_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
